force-app/main/default/objects/PurchasingInvoice__c/fields/AccountingCode__c.field-meta.xml
<CustomField>
    <fullName>AccountingCode__c</fullName>
    <formula>ResourceID__r.AccountingCode__r.Name</formula>
    <label>ACCOUNTING CODE</label>
    <type>Text</type>
</CustomField>