force-app/main/default/objects/PurchasingInvoice__c/fields/AmountIncludedTax__c.field-meta.xml
<CustomField>
    <fullName>AmountIncludedTax__c</fullName>
    <formula>TotalAmount__c  +  AmountOfTax__c</formula>
    <label>AMOUNT PURCHASING INCLUDING TAX(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>