force-app/main/default/objects/PurchasingInvoice__c/fields/AmountIncludedTaxLocal__c.field-meta.xml
<CustomField>
    <fullName>AmountIncludedTaxLocal__c</fullName>
    <formula>TotalAmountLocal__c  +  AmountOfTaxLocal__c</formula>
    <label>AMOUNT PURCHASING INCLUDING TAX(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>