force-app/main/default/objects/PurchasingInvoice__c/fields/AmountPaidPurchasingLocalText__c.field-meta.xml
<CustomField>
    <fullName>AmountPaidPurchasingLocalText__c</fullName>
    <label>AMOUNT PAID-PURCHASING(LOCAL)-TEXT</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>