force-app/main/default/objects/PurchasingInvoice__c/fields/Beneficiary__c.field-meta.xml
<CustomField>
    <fullName>Beneficiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BENEFICIARY-PURCHASING</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>PURCHASING_INVOICE_BENEFICIARY</relationshipName>
    <type>Lookup</type>
</CustomField>