force-app/main/default/objects/PurchasingInvoice__c/fields/ChargeUnit__c.field-meta.xml
<CustomField>
    <fullName>ChargeUnit__c</fullName>
    <defaultValue>1</defaultValue>
    <label>CHARGE UNIT</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>