force-app/main/default/objects/PurchasingInvoice__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>PROC ORDER LINE(CUSTOMER)</relationshipLabel>
    <relationshipName>ProcOrderLine</relationshipName>
    <type>Lookup</type>
</CustomField>