force-app/main/default/objects/PurchasingInvoice__c/fields/ExchangeRate__c.field-meta.xml
<CustomField>
    <fullName>ExchangeRate__c</fullName>
    <label>EXCHANGE RATE</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>