force-app/main/default/objects/PurchasingInvoice__c/fields/InvoiceId__c.field-meta.xml
<CustomField>
    <fullName>InvoiceId__c</fullName>
    <label>PURCHASING INVOICE NAME</label>
    <length>255</length>
    <type>Text</type>
</CustomField>