force-app/main/default/objects/PurchasingInvoice__c/fields/LOCK__c.field-meta.xml
<CustomField>
    <fullName>LOCK__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LOCK AFTER PAID</label>
    <type>Checkbox</type>
</CustomField>