force-app/main/default/objects/PurchasingInvoice__c/fields/PaidAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>PaidAmountLocal__c</fullName>
    <label>AMOUNT PAID-PURCHASING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>