force-app/main/default/objects/PurchasingInvoice__c/fields/PaymentConfirmed__c.field-meta.xml
<CustomField>
    <fullName>PaymentConfirmed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PAYMENT CONFIRMED-PURCHASING</label>
    <type>Checkbox</type>
</CustomField>