force-app/main/default/objects/PurchasingInvoice__c/fields/PaymentToVendor__c.field-meta.xml
<CustomField>
    <fullName>PaymentToVendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PAYMENT TO-PURCHASING VENDOR</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>PURCHASING_INVOICE</relationshipName>
    <type>Lookup</type>
</CustomField>