force-app/main/default/objects/PurchasingInvoice__c/fields/PurchasingBankTransactionCode__c.field-meta.xml
<CustomField>
    <fullName>PurchasingBankTransactionCode__c</fullName>
    <inlineHelpText>Input Bank Transaction Code from Bank Slip</inlineHelpText>
    <label>PURCHASING BANK TRANSACTION CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>