force-app/main/default/objects/PurchasingInvoice__c/fields/PurchasingCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>PurchasingCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PURCHASING CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipName>PURCHASING_CREDIT</relationshipName>
    <type>Lookup</type>
</CustomField>