force-app/main/default/objects/PurchasingInvoice__c/fields/PurchasingOrder__c.field-meta.xml
<CustomField>
    <fullName>PurchasingOrder__c</fullName>
    <label>PURCHASING ORDER</label>
    <referenceTo>PurchasingOrder__c</referenceTo>
    <relationshipName>PURCHASING_INVOICE</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>