force-app/main/default/objects/PurchasingInvoice__c/fields/PurchasingVATCreditAccountingCode__c.field-meta.xml
<CustomField>
    <fullName>PurchasingVATCreditAccountingCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>P/I VAT CREDIT ACCOUNTING CODE</label>
    <referenceTo>Accounting_Code__c</referenceTo>
    <relationshipName>PurchasingVATCreditAccountingCode</relationshipName>
    <type>Lookup</type>
</CustomField>