force-app/main/default/objects/PurchasingInvoice__c/fields/RepairMaintenanceCategory__c.field-meta.xml
<CustomField>
    <fullName>RepairMaintenanceCategory__c</fullName>
    <formula>text(ResourceID__r.RepairMaintenanceCategory__c)</formula>
    <label>REPAIR &amp; MAINTENANCE CATEGORY</label>
    <type>Text</type>
</CustomField>