force-app/main/default/objects/PurchasingInvoice__c/fields/ResourceID__c.field-meta.xml
<CustomField>
    <fullName>ResourceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RESOURCE ID</label>
    <referenceTo>resource__c</referenceTo>
    <relationshipName>PURCHASING_INVOICE</relationshipName>
    <type>Lookup</type>
</CustomField>