force-app/main/default/objects/PurchasingInvoice__c/fields/ResourceSubCategory__c.field-meta.xml
<CustomField>
    <fullName>ResourceSubCategory__c</fullName>
    <formula>text(ResourceID__r.SubCategory__c)</formula>
    <label>RESOURCE SUBCATEGORY</label>
    <type>Text</type>
</CustomField>