force-app/main/default/objects/PurchasingInvoice__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <formula>TEXT(ResourceID__r.Tax__c)</formula>
    <label>TAX</label>
    <type>Text</type>
</CustomField>