force-app/main/default/objects/PurchasingInvoice__c/fields/TaxRate__c.field-meta.xml
<CustomField>
    <fullName>TaxRate__c</fullName>
    <label>TAX RATE-PURCHASING</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>