force-app/main/default/objects/PurchasingInvoice__c/fields/TotalAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalAmount__c</fullName>
    <formula>UnitPrice__c  *  ChargeUnit__c</formula>
    <label>TOTAL AMOUNT OF PURCHASING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>