force-app/main/default/objects/PurchasingInvoice__c/fields/TotalAmountLocal__c.field-meta.xml
<CustomField>
    <fullName>TotalAmountLocal__c</fullName>
    <formula>UnitPriceLocal__c  *  ChargeUnit__c</formula>
    <label>TOTAL AMOUNT OF PURCHASING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>