force-app/main/default/objects/PurchasingInvoice__c/fields/TRBClaim__c.field-meta.xml
<CustomField>
    <fullName>TRBClaim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TRB/CLAIM</label>
    <referenceTo>Claim__c</referenceTo>
    <relationshipLabel>PROC ORDER LINE</relationshipLabel>
    <relationshipName>ProcOrderLine</relationshipName>
    <type>Lookup</type>
</CustomField>