force-app/main/default/objects/PurchasingInvoice__c/fields/UnpaidBalance__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalance__c</fullName>
    <formula>AmountIncludedTax__c  -  PaidAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNPAID BALANCE OF PURCHASING(USD)</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>