force-app/main/default/objects/PurchasingInvoice__c/fields/UnpaidBalanceLocal__c.field-meta.xml
<CustomField>
    <fullName>UnpaidBalanceLocal__c</fullName>
    <formula>AmountIncludedTaxLocal__c  -  PaidAmountLocal__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UNPAID BALANCE OF PURCHASING(LOCAL)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>