force-app/main/default/objects/PurchasingInvoice__c/fields/UnpaidbalanceOfPurchasingLocalText__c.field-meta.xml
<CustomField>
    <fullName>UnpaidbalanceOfPurchasingLocalText__c</fullName>
    <label>UNPAID BALANCE OF PURCHASING(LOCAL)-TEXT</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>