force-app/main/default/objects/PurchasingInvoice__c/listViews/Payable_Process.listView-meta.xml
<ListView>
    <fullName>Payable_Process</fullName>
    <columns>InvoiceId__c</columns>
    <columns>NAME</columns>
    <columns>PurchasingOrder__c</columns>
    <columns>AmountIncludedTaxLocal__c</columns>
    <columns>AmountIncludedTax__c</columns>
    <columns>PaidAmountLocal__c</columns>
    <columns>PaidAmount__c</columns>
    <columns>UnpaidBalanceLocal__c</columns>
    <columns>UnpaidBalance__c</columns>
    <columns>PaymentConfirmed__c</columns>
    <columns>Beneficiary__c</columns>
    <columns>PaymentSettledDate__c</columns>
    <columns>PaymentToVendor__c</columns>
    <columns>BankAccountPurchasing__c</columns>
    <columns>PaymentType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AmountIncludedTaxLocal__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>UnpaidBalanceLocal__c</field>
        <operation>notEqual</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>PurchasingOrder__c</field>
        <operation>equals</operation>
        <value>PO-000011</value>
    </filters>
    <label>Payable Process-Standard(ID)</label>
    <language>en_US</language>
</ListView>